--- a/imc.html
+++ b/imc.html
@@ -24,6 +24,6 @@
     <a href="index.html" class="inicio">Voltar à página inicial</a>
     <a href="portifolio.html" class="inicio">Voltar ao portifolio </a>
 
-    <script src="SRC/JAVA-SCRIPT/imc.js"></script>
+    <script src="src/js/imc.js"></script>
 </body>
 </html>
